put padding onto inner sidebar components to library items fix scrollbar

--- a/src/components/LibraryMenu.scss
+++ b/src/components/LibraryMenu.scss
@@ -1,11 +1,6 @@
 @import "open-color/open-color";
 
 .excalidraw {
-  .library-menu-items-container {
-    height: 100%;
-    width: 100%;
-  }
-
   .layer-ui__library {
     display: flex;
     flex-direction: column;
@@ -70,6 +65,16 @@
     align-items: center;
     justify-content: center;
     gap: 0.625rem;
+    position: relative;
+
+    &--at-bottom::before {
+      content: "";
+      width: calc(100% - 1.5rem);
+      height: 1px;
+      position: absolute;
+      top: -1px;
+      background: var(--sidebar-border-color);
+    }
   }
 
   .library-menu-browse-button {
@@ -127,14 +132,14 @@
     }
   }
 
-  .library-menu-dropdown-container {
+  .layer-ui__library .library-menu-dropdown-container {
     position: relative;
 
     &--in-heading {
-      margin-left: auto;
+      padding: 0;
       position: absolute;
-      top: 16px;
-      right: 10px;
+      top: 1rem;
+      right: 0.75rem;
       z-index: 1;
 
       .dropdown-menu {
